# haskell

./: LICENSE  flake.nix  haskell-from-first-principles.cabal  hello.cabal
app/: Main.hs
chapter_10/: database_processing.hs  rewriting_folds.hs  scans.hs  warmup.hs
chapter_11/: binary_tree.hs  exercises.hs  huttons_razor.hs  logic_goats.hs  phone.hs  programmers.hs  vehicles.hs
chapter_12/: binary_tree.hs  either.hs  maybe.hs  natty.hs  string_processing.hs  unfoldr.hs
chapter_13/: person.hs
chapter_14/identity/: CHANGELOG.md  identity.cabal
chapter_14/identity/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_14/identity/dist-newstyle/packagedb/ghc-9.4.8/: identity-0.1.0.0-inplace.conf  package.cache
chapter_14/identity/src/: MyLib.hs
chapter_14/identity/test/: Main.hs
chapter_14/wordNumber/: chapter14.cabal
chapter_14/wordNumber/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_14/wordNumber/dist-newstyle/packagedb/ghc-9.4.8/: chapter14-0.1.0.0-inplace.conf  package.cache
chapter_14/wordNumber/src/: WordNumber.hs  WordNumberTest.hs
chapter_15/: madness.hs  optional.hs
chapter_15/semigroup/: CHANGELOG.md  semigroup.cabal
chapter_15/semigroup/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_15/semigroup/dist-newstyle/packagedb/ghc-9.6.4/: package.cache  semigroup-0.1.0.0-inplace.conf
chapter_15/semigroup/src/: MyLib.hs
chapter_15/semigroup/test/: Main.hs
chapter_16/: chapter16.cabal
chapter_16/app/: Heavy.hs  Main.hs
chapter_16/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_16/dist-newstyle/packagedb/ghc-9.6.4/: chapter16-0.1.0.0-inplace-FunctorQuick.conf  chapter16-0.1.0.0-inplace.conf  package.cache
chapter_16/src/: FunctorQuick.hs
chapter_16/test/: Main.hs
chapter_17/: CHANGELOG.md  chapter17.cabal
chapter_17/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_17/dist-newstyle/packagedb/ghc-9.6.4/: chapter17-0.1.0.0-inplace.conf  package.cache
chapter_17/src/: MyLib.hs
chapter_18/: CHANGELOG.md  chapter18.cabal
chapter_18/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_18/dist-newstyle/packagedb/ghc-9.6.4/: chapter18-0.1.0.0-inplace.conf  package.cache
chapter_18/src/: MyLib.hs
chapter_18/test/: Main.hs
chapter_2/: waxOff.hs
chapter_20/: CHANGELOG.md  chapter20.cabal
chapter_20/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_20/dist-newstyle/packagedb/ghc-9.6.4/: chapter20-0.1.0.0-inplace.conf  package.cache
chapter_20/src/: MyLib.hs
chapter_20/test/: Main.hs
chapter_21/: CHANGELOG.md  chapter21.cabal
chapter_21/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_21/dist-newstyle/packagedb/ghc-9.6.4/: chapter21-0.1.0.0-inplace.conf  package.cache
chapter_21/src/: MyLib.hs
chapter_21/test/: Main.hs
chapter_22/: CHANGELOG.md  chapter22.cabal
chapter_22/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_22/src/: MyLib.hs
chapter_23/: CHANGELOG.md  chapter23.cabal
chapter_23/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
chapter_23/src/: MyLib.hs
chapter_24/: CHANGELOG.md  chapter24.cabal
chapter_24/src/: Fractions.hs  IpAddress.hs  Marshalling.hs  MyLib.hs
chapter_25/: CHANGELOG.md  chapter25.cabal
chapter_25/src/: MonadStep.hs  MyLib.hs
chapter_26/: CHANGELOG.md  chapter26.cabal
chapter_26/src/: MyLib.hs
chapter_26/test/: Main.hs
chapter_28/: CHANGELOG.md  chapter28.cabal
chapter_28/app/: Main.hs
chapter_3/: question2.hs  question3.hs
chapter_4/: abs.hs  moodSwing.hs
chapter_4/.direnv/: nix-profile-23.05-r5b4xjc4gvraxdsl
chapter_5/: parametricity.hs  type-do.hs  type_inference1.hs  type_inference2.hs  types.hs
chapter_6/: eq.hs  eq_exercises.hs  exercises.hs
chapter_7/: arith.hs  artful_dodgy.hs  case_practice.hs  exercises.hs  grab_bag.hs  guard_duty.hs  variety_pack.hs
chapter_8/: exercises.hs  factorial.hs
chapter_9/: enum_from_to.hs  exercises.hs  fearful_symmetry.hs  filtering.hs  my_standard.hs  square_cube.hs  zipping.hs
cipher/: CHANGELOG.md  cipher.cabal  cipher.hi  cipher.hs
cipher/app/: Main.hs
cipher/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
cipher/dist-newstyle/packagedb/ghc-9.4.8/: cipher-0.1.0.0-inplace-Cipher.conf  package.cache
cipher/src/: Cipher.hs
cipher/test/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.4/: hello-3.0.0.2-inplace-Funkenstein.conf  package.cache
hello_world/: area.hs  print2.hs  print3.hs  print3_flipped.hs  test.hs  topOrLocal.hs
ini_parser/: ini-parser.cabal
ini_parser/src/: Json.hs
nix/: hix.nix
scotty/: CHANGELOG.md  myscotty.cabal
scotty/app/: Main.hs
vectors/: ghc-9.6.4.hp  ghc-9.6.4.ps  vectors.cabal  vectors.html
vectors/app/: Main.hs
