cabal-version:      3.0
name:               chapter16
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             oliverpauffley
maintainer:         mrpauffley@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable chapter16
    import:           warnings
    main-is:          Main.hs
    other-modules:    Heavy

    -- other-extensions:
    build-depends:    base ^>=4.18.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

library FunctorQuick
    import:           warnings
    exposed-modules:  FunctorQuick
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.0,
                      QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite functor-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0,
        FunctorQuick,
        QuickCheck
