cabal-version:      3.0
name:               chapter17
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             oliverpauffley
maintainer:         mrpauffley@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.0,
                      QuickCheck,
                      checkers
    hs-source-dirs:   src
    default-language: Haskell2010

executable chapter17
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.0,
        chapter17

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite chapter17-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0,
        chapter17,
        QuickCheck,
        checkers
