cabal-version:      3.0
name:               chapter14
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             oliverpauffley
maintainer:         mrpauffley@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    -- .hs or .lhs file containing the Main module.
    exposed-modules: WordNumber
    build-depends:    base ^>=4.17.2.1
                      , hspec
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite src
           hs-source-dirs: src
           default-language: Haskell2010
           main-is: WordNumberTest.hs
           type: exitcode-stdio-1.0
           build-depends: base
                          , hspec
                          , WordNumber
